# nexsock

./: .env  .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  build.rs  client.py  dist-workspace.toml  logs.mermaid  state.db-shm  state.db-wal  test-concurrent.py
.cargo/: config.toml
.github/workflows/: test.yml
docs/: SMART_DEPENDENCIES_NGROK_IMPLEMENTATION.md
migrations/: 0001_init.down.sql  0001_init.up.sql  0002_add-status-rows-to-service.down.sql  0002_add-status-rows-to-service.up.sql
nexsock/: Cargo.toml
nexsock-abi/: Cargo.toml
nexsock-abi/src/: lib.rs
nexsock-client/: Cargo.toml
nexsock-client/src/: client.rs  lib.rs
nexsock-config/: Cargo.toml
nexsock-config/src/: lib.rs  traits.rs
nexsock-db/: Cargo.toml
nexsock-db/migration/: Cargo.toml
nexsock-db/migration/src/: lib.rs  m20220101_000001_create_base_service_tables.rs  m20250605_000002_add_git_columns.rs  main.rs
nexsock-db/src/: error.rs  lib.rs
nexsock-db/src/models/: mod.rs  prelude.rs  service.rs  service_config.rs  service_dep.rs  service_dependency.rs  service_record.rs
nexsock-db/src/repositories/: mod.rs  service.rs  service_config.rs  service_dependency.rs
nexsock-db/src/tests/: common.rs  mod.rs
nexsock-db/src/tests/repositories/: mod.rs  service_config_tests.rs  service_dependency_tests.rs  service_tests.rs
nexsock-example-plugin/: Cargo.toml
nexsock-example-plugin/src/: lib.rs
nexsock-plugins/: Cargo.toml
nexsock-plugins/src/: lib.rs  native.rs
nexsock-plugins/src/lua/: manager.rs  mod.rs  runner.rs
nexsock-protocol/: Cargo.toml  expanded.rs
nexsock-protocol-core/: Cargo.toml
nexsock-protocol-core/src/: error.rs  frame.rs  handler.rs  lib.rs  prelude.rs  stream_transport.rs  test.rs
nexsock-protocol-core/src/traits/: handler.rs  message.rs  mod.rs  transport.rs
nexsock-protocol/src/: error.rs  header.rs  lib.rs  macros.rs  protocol.rs  traits.rs
nexsock-protocol/src/commands/: add_service.rs  config.rs  dependency.rs  dependency_info.rs  error.rs  extra.rs  git.rs  list_services.rs  manage_service.rs  mod.rs  service_status.rs  stdout.rs
nexsock-protocol/src/new/: handlers.rs  mod.rs
nexsock-testing/: Cargo.toml  TESTING_INFRASTRUCTURE.md
nexsock-testing/src/: database.rs  fixtures.rs  lib.rs  macros.rs  matchers.rs  mock.rs  process.rs  protocol.rs  setup.rs  utils.rs
nexsock-utils/: Cargo.toml
nexsock-utils/src/: lib.rs
nexsock-web/: Cargo.toml  README.md  TERA_PAGINATION_FIX.md  build.rs  package-lock.json  package.json  tsconfig.json
nexsock-web/build_src/: error.rs  mod.rs  templates.rs  typescript.rs
nexsock-web/public/: service_management.js  style.css
nexsock-web/public/css/: base.css  main.css  variables.css
nexsock-web/public/css/components/: alerts.css  buttons.css  dropdown.css  forms.css  modal.css  navigation.css  services.css  status.css
nexsock-web/public/js/: main.css  main.js  main.js.map  main.min.js  main.min.js.map  types.js  types.js.map
nexsock-web/src/: daemon_client.rs  error.rs  extractors.rs  layout.rs  lib.rs  main.rs  middleware.rs  state.rs  templates.rs  traits.rs
nexsock-web/src-ts/: example.tsx  jsx-utils.ts  main.ts  types.ts
nexsock-web/src-ts/components/: ErrorModal.tsx  ErrorNotification.tsx  NsBadge.css  NsBadge.tsx  NsButton.css  NsButton.tsx  NsCard.css  NsCard.tsx  README.md  index.ts
nexsock-web/src-ts/core/: api.ts  css.ts  debug.ts  init.ts  jsx-utils.ts  web-components.ts
nexsock-web/src-ts/services/: config-service.ts  env-vars-service.ts  git-service.ts  service-management.ts  theme-service.ts
nexsock-web/src-ts/types/: api.ts  dom.ts  event.ts  git.ts  index.ts  jsx.ts  service.ts  storage.ts  ui.ts  window.ts
nexsock-web/src-ts/ui/: dropdowns.ts  error-display.css  error-display.ts  messages.ts  modals.ts
nexsock-web/src/components/: dependecy_view.rs  dependency_view.rs  git_view.rs  mod.rs  page.rs  pagination.rs  service_basic.rs  service_status.rs  services_list.rs
nexsock-web/src/components/mange_service/: mod.rs  start.js  start.rs
nexsock-web/src/embedded/: mod.rs  public.rs
nexsock-web/src/endpoints/: api.rs  fallback.rs  get_services.rs  index.rs  mod.rs  templates.rs
nexsock-web/src/endpoints/api/: mod.rs  test_errors.rs
nexsock-web/src/endpoints/api/service/: add.rs  delete.rs  get.rs  git.rs  mod.rs  start.rs  stop.rs
nexsock-web/src/error/: constructors.rs  legacy.rs  mod.rs  response.rs  span_utils.rs  types.rs
nexsock-web/src/services/: mod.rs
nexsock-web/src/services/nexsock_services/: add.rs  delete.rs  find.rs  git.rs  list.rs  mod.rs  start.rs  stop.rs
nexsock-web/templates/: base.html  config-modal-content.html  config-modal.html  config-section.html  dependency-management.html  dependency.html  env-var-pair.html  error.html  error_boundary.html  git-modal.html  git-section.html  git-status.html  git_branches.html  git_log.html  git_section.html  git_status.html  loading_state.html  management.html  page.html  service_basic.html  service_page.html  services_list.html
nexsock-web/wix/: main.wxs
nexsock/examples/: nexsock_test_client.rs
nexsock/src/: cli.rs  client.rs  commands.rs  display.rs  lib.rs  main.rs
nexsock/src/cli/: concurrent.rs  mod.rs
nexsock/src/display/: formatters.rs
nexsock/wix/: main.wxs
src/: config_manager.rs  dependency_manager.rs  error.rs  lib.rs  main.rs  prelude.rs  service_manager.rs  statics.rs  test.rs  traits.rs
src/config_manager/: mod.rs  new.rs
src/daemon/: config.rs  connection.rs  mod.rs  server.rs
src/dependency_manager/: mod.rs  new.rs
src/git/: auth.rs  mod.rs  types.rs
src/models/: mod.rs  service.rs  service_config.rs  service_dependency.rs  service_record.rs
src/plugins/: mod.rs
src/repositories/: mod.rs  service.rs  service_config.rs  service_dependency.rs  service_record.rs
src/service_manager/: mod.rs  new.rs
src/tests/: basic_daemon.rs  common.rs  managers_basic.rs  mod.rs  service_basic.rs
src/traits/: configuration_management.rs  dependency_management.rs  git_backend.rs  git_management.rs  git_service.rs  mod.rs  (+2 more)
wix/: main.wxs
(+2 files in other folders)
