[workspace]
members = ['.', 'nexsock', "nexsock-client", "nexsock-config", "nexsock-protocol", "nexsock-utils", "nexsock-web"]

[workspace.package]
version = "1.0.0-5"
edition = "2021"
authors = ["Emil Schütt <emil.schutt@gmail.com>"]
license = "Apache-2.0"
homepage = "https://github.com/retrokiller543/nexsock"
repository = "https://github.com/retrokiller543/nexsock"

[package]
name = "nexsockd"
version = "1.0.0-5"
description = "Daemon service for managing other services on the running machine"
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[package.metadata.wix]
upgrade-guid = "A648CB9F-74B1-4655-A238-FA91CE16304A"
path-guid = "E4A4BF37-405C-4659-93E6-0CB7C8B63EC8"
license = false
eula = false

[workspace.dependencies]
nexsock-protocol = { path = "nexsock-protocol" }
nexsock-client = { path = "nexsock-client" }
nexsock-config = { path = "nexsock-config" }
nexsock-utils = { path = "nexsock-utils" }
sqlx = { version = "0.8.3", features = ["sqlite", "macros", "chrono", "runtime-tokio"] }
sqlx-utils = { version = "1.0.0-2", default-features = false, features = ["sqlite"],  git = "https://reasonably-happy-moose.ngrok-free.app/tosic.killer/sqlx-utils.git" }
bincode = { version = "2.0.0-rc.3" }

[dependencies]
sqlx-utils = { workspace = true }
sqlx = { workspace = true }
tokio = { version = "1.43", features = ["full"] }
thiserror = "2.0.11"
tempfile = "3.15.0"
tracing = { version = "0.1.41", features = ["log"] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tracing-core = "0.1.33"
tosic-utils = { version = "0.2.3", features = ["env", "dotenv", "tracing"], registry = "gitea" }
git2 = { version = "0.20.0", optional = true }
serde = { version = "1.0.215", features = ["derive"] }
paste = "1.0.15"
futures = "0.3.31"
nexsock-protocol = { workspace = true }
nexsock-config = { workspace = true }
nexsock-utils = { workspace = true }
bincode = { workspace = true }
anyhow = "1.0.95"
derive_more = {version = "1.0.0", features = ["full"]}

[build-dependencies]
sqlx = { version = "0.8.3", features = ["sqlite", "macros", "chrono", "runtime-tokio"] }
tokio = { version = "1.43", features = ["full"] }
sqlx-utils = { workspace = true }

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[features]
default = []
git = ["git2"]
