[workspace]
members = [
    '.',
    'nexsock',
    "nexsock-abi",
    "nexsock-client",
    "nexsock-config",
    "nexsock-db",
    "nexsock-example-plugin",
    "nexsock-plugins",
    "nexsock-protocol",
    "nexsock-protocol-core",
    "nexsock-utils",
    "nexsock-web",
    "nexsock-db/migration"
]

[workspace.package]
version = "1.0.0-7"
edition = "2021"
authors = ["Emil Schütt <emil.schutt@gmail.com>"]
license = "Apache-2.0"
homepage = "https://github.com/retrokiller543/nexsock"
repository = "https://github.com/retrokiller543/nexsock"

[package]
name = "nexsockd"
version = "1.0.0-7"
description = "Daemon service for managing other services on the running machine"
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[package.metadata.wix]
upgrade-guid = "A648CB9F-74B1-4655-A238-FA91CE16304A"
path-guid = "E4A4BF37-405C-4659-93E6-0CB7C8B63EC8"
license = false
eula = false

[workspace.dependencies]
nexsock-abi = { path = "nexsock-abi" }
nexsock-plugins = { path = "nexsock-plugins" }
nexsock-protocol = { path = "nexsock-protocol" }
nexsock-client = { path = "nexsock-client" }
nexsock-config = { path = "nexsock-config" }
nexsock-utils = { path = "nexsock-utils" }
nexsock-db = { path = "nexsock-db" }

anyhow = { version = "1.0", default-features = false, features = ["std"] }
sqlx = { version = "0.8.3", features = ["sqlite", "macros", "chrono", "runtime-tokio"] }
sqlx-utils = { version = "1.0.0-2", default-features = false, features = ["sqlite"],  git = "https://reasonably-happy-moose.ngrok-free.app/tosic.killer/sqlx-utils.git" }
bincode = { version = "2.0.0-rc.3" }
# tosic-utils = { version = "0.2.4", features = ["env", "dotenv", "tracing"], registry = "gitea" }
tosic-utils = { version = "0.2.4", features = ["env", "dotenv", "tracing"], path = "../tosic-utils" }
savefile = { version = "0.18.5", features = ["derive", "serde"] }
savefile-derive = { version = "0.18.5" }
savefile-abi = { version = "0.18.5" }
tracing = { version = "0.1.41", features = ["log"] }
mlua = { version = "0.10.3", features = ["anyhow", "vendored", "lua54", "async"] }
derive_more = { version = "2.0.1", features = ["full"] }
sea-orm = { version = "1.1", features = [
    "sqlx-sqlite",
    "runtime-tokio-rustls",
    "macros",
    "with-chrono"
]}

[dependencies]
sqlx-utils = { workspace = true }
sqlx = { workspace = true }
tokio = { version = "1.43", features = ["full"] }
thiserror = "2.0.11"
tempfile = "3.15.0"
tracing.workspace = true
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tracing-core = "0.1.33"
tosic-utils = { workspace = true }
git2 = { version = "0.20.0", optional = true }
serde = { version = "1.0.215", features = ["derive"] }
paste = "1.0.15"
futures = "0.3.31"
nexsock-protocol = { workspace = true }
nexsock-config = { workspace = true, features = ["static-config"] }
nexsock-utils = { workspace = true }
nexsock-db.workspace = true
bincode = { workspace = true }
anyhow = "1.0.95"
port-selector = "0.1.6"
command-group = { version = "5.0.1", features = ["tokio", "with-tokio", "async-trait"] }
nexsock-abi.workspace = true
nexsock-plugins = { workspace = true, features = ["native", "lua"] }
cfg-if = "1.0.0"
clap = { version = "4.5.31", features = ["derive"] }
tracing-appender = { version = "0.2.3", features = ["parking_lot"] }
oneshot = "0.1.11"
parking_lot = { version = "0.12.3", features = ["send_guard", "arc_lock"] }

[build-dependencies]
sqlx = { version = "0.8.3", features = ["sqlite", "macros", "chrono", "runtime-tokio"] }
tokio = { version = "1.43", features = ["full"] }
sqlx-utils = { workspace = true }

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
#strip = "debuginfo"

[features]
default = []
git = ["git2"]
