[package]
name = "nexsock-abi"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
savefile.workspace = true
savefile-derive.workspace = true
savefile-abi.workspace = true
nexsock-protocol = { workspace = true, features = ["savefile"] }