[package]
name = "nexsock-client"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
tokio = { version = "1.43", features = ["net", "io-util"] }
thiserror = "2.0.11"
anyhow = "1.0.95"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
nexsock-protocol = { workspace = true }
nexsock-config = { workspace = true }
bincode = { workspace = true }
deadpool = "0.12.1"
