[package]
name = "nexsock-config"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
directories = "6.0.0"
config = "0.15.6"
serde = { version = "1.0.217", features = ["derive"] }
derive_more = { version = "1.0.0", features = ["full"] }
thiserror = "2.0.11"
toml = "0.8.19"