[package]
name = "nexsock-db"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
nexsock-config = { workspace = true, features = ["static-config"] }
nexsock-protocol = { workspace = true, features = ["sea-orm"] }
migration = { path = "migration", version = "0.1.0" }

sea-orm.workspace = true
sqlx.workspace = true
tracing.workspace = true
derive_more.workspace = true
anyhow.workspace = true

serde = "1.0"
serde_json = "1.0"
thiserror = "2.0.12"

[features]
default = []
debug = ["anyhow/backtrace"]

[dev-dependencies]
sqlx = { version = "^0.8", features = ["sqlite", "runtime-tokio-native-tls"] }
tokio.workspace = true
