[package]
name = "nexsock-plugins"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
anyhow = "1.0.95"
savefile.workspace = true
savefile-abi.workspace = true
tosic-utils.workspace = true
nexsock-config.workspace = true