[package]
name = "nexsock-protocol"
description = "The protocol used for nexsock"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
binrw = { version = "0.14.1" }
tokio = { version = "1.43", features = ["full"] }
thiserror = "2.0.11"
anyhow = "1.0.95"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
serde = { version = "1.0.217", features = ["derive"] }
sqlx = { workspace = true }
bincode = { workspace = true }
derive_more.workspace = true
paste = "1.0.15"

savefile = { workspace = true, optional = true }
mlua = { workspace = true, optional = true }
cfg-if = "1.0.0"

[dependencies.sea-orm]
workspace = true
optional = true

[features]
default = []
savefile = ["dep:savefile"]
mlua = ["dep:mlua"]
sea-orm = ["dep:sea-orm"]
