[package]
name = "nexsock-testing"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
description = "Testing utilities and infrastructure for Nexsock"

[dependencies]
anyhow.workspace = true
tokio = { workspace = true, features = ["full", "test-util"] }
sea-orm.workspace = true
tempfile.workspace = true
tracing.workspace = true
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
serde.workspace = true
nexsock-db = { workspace = true }
nexsock-protocol = { workspace = true, features = ["test-helpers"] }
nexsock-config = { workspace = true }
bincode.workspace = true
futures.workspace = true
parking_lot.workspace = true
uuid.workspace = true
chrono.workspace = true
rand = "0.8"

[dev-dependencies]
tokio-test = "0.4.4"

[features]
default = []
integration = []