[package]
name = "nexsock-utils"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
bincode = { workspace = true }
derive_more.workspace = true
serde = { version = "1.0.217", features = ["derive"] }