[package]
name = "nexsock-web"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
tokio = { version = "1.43", features = ["full"] }
thiserror = "2.0.11"
anyhow = "1.0.95"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
nexsock-protocol = { workspace = true }
nexsock-client = { workspace = true }
bincode = { workspace = true }
axum = { version =  "0.8.1", features = ["macros"] }
rust_html = { version = "1.1.6", features = ["axum"] }
directories = "6.0.0"
