[package]
name = "nexsock-web"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[package.metadata.wix]
upgrade-guid = "ED2077CB-A37D-4E75-9AE7-D4ACDFC9D5E9"
path-guid = "38A97D20-C210-4F39-ADBA-821BFC0BD79F"
license = false
eula = false

[dependencies]
tokio = { version = "1.43", features = ["full"] }
thiserror = "2.0.11"
anyhow = "1.0.95"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
nexsock-protocol = { workspace = true }
nexsock-client = { workspace = true }
bincode = { workspace = true }
axum = { version =  "0.8.1", features = ["macros"] }
rust_html = { version = "1.1.6", features = ["axum"] }
directories = "6.0.0"
