[package]
name = "nexsock-web"
description = "A Web interface for managing services using `nexsock`"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[package.metadata.wix]
upgrade-guid = "ED2077CB-A37D-4E75-9AE7-D4ACDFC9D5E9"
path-guid = "38A97D20-C210-4F39-ADBA-821BFC0BD79F"
license = false
eula = false

[dependencies]
tokio = { version = "1.43", features = ["full"] }
thiserror = "2.0.11"
anyhow = "1.0.95"
tracing = "0.1.41"
tracing-subscriber = { version =  "0.3.19", features = ["env-filter"] }
nexsock-protocol = { workspace = true }
nexsock-client = { workspace = true }
nexsock-config = { workspace = true }
bincode = { workspace = true }
axum = { version =  "0.8.1", features = ["macros"] }
directories = "6.0.0"
derive_more.workspace = true
tera = "1.20.0"
serde = { version = "1.0.217", features = ["derive"] }
tower-http = { version = "0.6.2", features = ["fs", "trace", "tracing", "compression-full"] }
rust-embed = { version = "8.5.0", features = ["axum"] }
mime_guess = "2.0.5"
tosic-utils = { workspace = true }
axum-response-cache = "0.2.0"
futures = "0.3.31"
deadpool = "0.12.1"
tikv-jemallocator = { workspace = true, optional = true }
cfg-if = "1.0.0"
serde_json = "1.0.140"
urlencoding = "2.1.3"

[build-dependencies]
directories = "6.0.0"
anyhow = "1.0.95"

[features]
default = []
jemalloc = ["tikv-jemallocator"]