[package]
name = "nexsock"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.43", features = ["full"] }
thiserror = "2.0.11"
anyhow = "1.0.95"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
nexsock-protocol = { workspace = true }
bincode = { workspace = true }
clap = { version = "4.5.26", features = ["derive"] }
derive_more = { version = "1.0.0", features = ["full"] }
