[package]
name = "nexsock"
description = "A Cli tool for managing servics running on the local machine"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[package.metadata.wix]
upgrade-guid = "5F8BC1FC-F490-4726-94AE-ED565F29CB2C"
path-guid = "E179084C-7EEC-4820-93CA-9C2E979A1E79"
license = false
eula = false

[dependencies]
tokio = { version = "1.43", features = ["full"] }
thiserror = "2.0.11"
anyhow = "1.0.95"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
nexsock-protocol = { workspace = true }
nexsock-client = { workspace = true }
nexsock-config = { workspace = true, features = ["static-config"] }
bincode = { workspace = true }
clap = { version = "4.5.26", features = ["derive"] }
derive_more.workspace = true
futures = "0.3.31"
tikv-jemallocator = { workspace = true, optional = true }

[features]
default = []
jemalloc = ["tikv-jemallocator"]
